[package]
name = "joke_generator"
version = "0.1.0"
authors = ["Patrick McLennan <patrick.a.mclennan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
serde = "1.0.123"
yew = "0.17"